# nimble

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
api/: queries.py  schemas.py  tasks.py  urls.py  utils.py  validators.py  views.py
api/management/: __init__.py
api/management/commands/: __init__.py  import_contacts_from_csv.py
api/migrations/: 0001_create_contacts.py  0002_full_text_search.py  __init__.py
config/: __init__.py  celery.py  celeryy.py  settings.py  urls.py
nimble/: asgi.py  settings.py  urls.py  wsgi.py
tests/: __init__.py  conftest.py  manual_testing.py  settings.py
tests/api/: __init__.py  conftest.py  test_management.py  test_queries.py  test_tasks.py  test_utils.py  test_validators.py  test_views.py
