[tool.poetry]
name = "nimble"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
flake8 = "5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.13.0"
pytest-clarity = "^1.0.1"
faker = "^19.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
