[tool.poetry]
name = "nimble"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "4.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
coreapi = "^2.3.3"
django-cors-headers = "^4.2.0"
celery = "^5.3.1"
redis = "^4.6.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.1"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
flake8 = "5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.13.0"
pytest-clarity = "^1.0.1"
faker = "^19.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
force-exclude = """
    .pre-commit-config.yaml,
    poetry.lock,
    pyproject.toml,
    README.md
"""
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
  | .pre-commit-config.yaml
  | poetry.lock
  | pyproject.toml
  | README.md
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = []

[tool.pytest.ini_options]
# === Pytest ===
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "api", "config",]
norecursedirs = [".env", "migrations", "venv",]
testpaths = ["tests",]
console_output_style = "progress"
python_files = "test_*"
python_classes = "Test*"
python_functions = "test_*"

# === Pytest ===